<resources>
    <string name="app_name">View Global</string>
    <string name="app_version">version: V1.1.9</string>
    <string name="company_website">Website: www.kaer.cn</string>
    <string name="company_phone">Tel: 4006080787</string>
    <string name="company">Shandong Kaer Electric Co.Ltd.</string>
    <string name="copyright">All rights reserved: Shandong Kaer Electric Co.Ltd.</string>
    <string name="own">real-time</string>
    <string name="history">history</string>
    <string name="msg">news</string>
    <string name="more">more</string>
    <string name="btn_ok">confirm</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_back">back</string>
    <string name="add">add</string>
    <string name="app_exit">Quit</string>
    <string name="smartdoor_pop_title">smart doorbell</string>
    <string name="smartdoor_pop_explain">After determining,open real-time video</string>
    <string name="search_ap">The network configuration</string>
    <string name="ap_explain_title">Steps to configure the device：</string>
    <string name="ap_explain_step">\n1.Connecting the power of smart doorbell\n2.Connecting smart doorbell\n\n\t\t\t  Please open the mobile phone settings page, open the Wlan network, select the MY-XXX connection,
        If the MY-XXX is more, please find the exact name in random information card, please confirm the connection devices on a network.
        If you can not get the corresponding equipment network please reset your device, click the reset button for 3 seconds to reset, and then look for MY-XXX connection.
        </string>
    <string name="search">Search home router</string>
    <string name="config_ap">Home router list</string>
    <string name="config_ap_explain">Choose your home router, so that the smart doorbell connected to the network。</string>
    <string name="use_now">experience now</string>
    <string name="login">login</string>
    <string name="logout">login out</string>
    <string name="register">registered account</string>
    <string name="register_now">register now</string>
    <string name="submit">submit</string>
    <string name="login_username">user name</string>
    <string name="login_password">password</string>
    <string name="hint_user">Please enter the user name</string>
    <string name="hint_pwd"> Please enter a password</string>
    <string name="hint_repwd">Please enter the password to confirm</string>
    <string name="hint_email">Please enter the mailbox</string>
    <string name="auto_login">Auto login</string>
    <string name="forget_pwd_title">Forgot password</string>
    <string name="forget_pwd">Forgot password？</string>
    <string name="find_now">Find back</string>
    <string name="old_pwd">enter the old password</string>
    <string name="new_pwd">enter the new password</string>
    <string name="new_repwd">enter the new password again</string>
    <string name="hint_wifi_ssid"> Click to search WIFI</string>
    <string name="hint_wifi_pwd">Please enter the WiFi password</string>
    <string name="network_upgrade">To upgrade APK</string>
    <string name="network_check_upgrade">Check the upgraded application</string>
    <string name="network_check_result">Upgrade results</string>
    <string name="network_upgrade_prompt">Find a new version of the software, whether to upgrade now？</string>
    <string name="network_upgrade_now">Upgrade now</string>
    <string name="network_upgrade_later">Upgrade later</string>
    <string name="network_upgrade_info">The information of software updates</string>
    <string name="network_tv_upgrade_info">0%</string>
    <string name="modify_pwd">Change the password</string>
    <string name="remember_pwd">Remember the password</string>
    <string name="setting">Function settings</string>
    <string name="local_device">Local devices</string>
    <string name="set_wifi">WIFI terminal configuration</string>
    <string name="help"> Help</string>
    <string name="about">About</string>
    <string name="about_software">About the software</string>
    <string name="about_kaer">About Kaer</string>
    <string name="play_alarm_music">Voice Alarm</string>
    <string name="play_alarm_music_explain">After function opened, the phone will receive a voice alarm message.</string>
    <string name="remember_pwd_explain">After function closed, log off will delete the password.</string>
    <string name="select_term_online_explain">Please select the online terminal to be configured</string>
    <string name="set_wifi_explain">After confirmed, it will config the current network to the device.</string>
    <string name="wifi_term_list">Online terminal list</string>
    <string name="protect_traffic"> Flow protection</string>
    <string name="protect_traffic_explain">After function enabled, only allow to watch the video in the WiFi case.</string>
    <string name="device_link"><![CDATA[Is connecting…]]></string>
    <string name="device_manager">Device management</string>
    <string name="delete_device">Remove the equipment</string>
    <string name="set_device_bg">Set background image</string>
    <string name="delete_device_bg">Remove background image</string>
    <string name="device_operation"> Device operation</string>
    <string name="add_new_device">Add device</string>
    <string name="add_device_share">Adding terminal sharing</string>
    <string name="hint_share_name">Please enter the user name you want to share</string>
    <string name="hint_device_id">Please enter the device ID</string>
    <string name="hint_device_name">Please enter the device name</string>
    <string name="scan_qr">Please enter the device name</string>
    <string name="modify_device_name">Modify the terminal</string>
    <string name="my_device_shared_manager">Equipment share management</string>
    <string name="devices_shared">My share</string>
    <string name="share_device_title">Device shared</string>
    <string name="share_user_title"> User shared</string>
    <string name="share_device_explain">After confirmed, this terminal will be shared to the user.</string>
    <string name="no_device_list">You have not yet added the device, do it now!</string>
    <string name="no_shared_list">Your friend has not yet shared the device to you!</string>
    <string name="no_local_image"> You have not yet snapped the picture!</string>
    <string name="no_local_video"> You have no local video file!</string>
    <string name="no_online_device_list"> You have no online device!</string>
    <string name="no_alert_msg"> Congratulations, you have no warning message!</string>
    <string name="local_picture">Snap the picture</string>
    <string name="local_video">Local video</string>
    <string name="terminal_video">Terminal video</string>
    <string name="request_terminal_video">Requesting terminal video</string>
    <string name="set_date_time">Set date and time</string>
    <string name="start_date">Start time：</string>
    <string name="end_date">End time：</string>
    <string name="set_date">Set the date</string>
    <string name="set_time">Set the time</string>
    <string name="select_date">Please select the date：</string>
    <string name="select_time">Please select the time：</string>
    <string name="alert_msg">Alarm message</string>
    <string name="system_msg">System message</string>
    <string name="image_view">Picture to view</string>
    <string name="set_background">Set background image</string>
    <string name="video_record_view_rec">REC</string>
    <string name="clarity_high">HD</string>
    <string name="clarity_normal"> Balanced</string>
    <string name="clarity_low">Smooth</string>
    <string name="video_loaded_text"><![CDATA[Loaded(0%)，Please wait...]]></string>
    <string name="local_player_time_init">00:00:00</string>
    <string name="terminal_player_play_normal">Normal playback</string>
    <string name="terminal_player_played_size"> Has been playing: 0000000B</string>
    <string name="terminal_player_total_size">Total space: 0000000B</string>
    <string name="terminal_player_download_size">Buffered: 0B</string>
    <string name="terminal_device_video">Terminal video</string>
    <string name="device_item_name">Name: Door camera</string>
    <string name="device_item_mac">ID: 009B684850022</string>
    <string name="msg_item_event">Event: Motion detection</string>
    <string name="msg_item_mac">From: 0090B0000020</string>
    <string name="msg_item_time"><![CDATA[Time: 2014-04-08 15:32:10]]></string>
    <string name="pull_to_refresh_pull_label">Pull-down refresh</string>
    <string name="pull_to_refresh_release_label">Refresh after releasing </string>
    <string name="pull_to_refresh_refreshing_label">Refreshing...\u2026</string>
    <string name="pull_to_refresh_footer_release_label">Load after releasing </string>
    <string name="pull_to_refresh_footer_pull_label">Upload more after upward pull</string>
    <string name="pull_to_refresh_footer_refreshing_label">Loading…\u2026</string>
    <string name="about_kaer_content">Shandong Kaer Electric Co., Ltd is a high-tech joint-stock institute, mainly engaging in research, develop, manufacture and market of the communication terminals and security video terminals. The company has passed ISO9001 international quality management system certification, ISO14001 environmental management system certification and the National Compulsory Certification (CCC), and all products have acquired the Network Access License and the CMC Certificate from the Ministry of Information Industry. The DVR, IPC series of products have passed through the testing of the Ministry of Public Security, the DVS products was evaluated and named as one of the "top ten innovative brand" in 2007 by "Hc360.com”, the authority media in security industry
\n\nThe company applies the modern management method into product research and development, manufacturing and marketing,  and establish a perfect management system of after sale service, to ensure that users can get better after sale service at the same time of using the high quality products
\n\nKaer has abundant technical force, outstanding product basis and the first-class service concept, is willing to provide the advanced, professional, high-quality technical support, products and services for all sectors of society, to create much more value for customers, and cooperate with customers sincerely。</string>
    <string name="tips">Tips</string>
    <string name="delete_the_current_local_video">Delete the current local video?</string>
    <string name="cancel">cancel</string>
    <string name="confirm">confirm</string>
    <string name="delete_the_image">Delete the image?</string>
    <string name="sorry">Sorry</string>
    <string name="the_video_format_is_not_correct">The video format is not correct, stop playing!</string>
    <string name="noted">Noted</string>
    <string name="no_pictures_front">No pictures front!</string>
    <string name="no_pictures_behind">No pictures behind!</string>
    <string name="adding_equipment">Adding equipment... </string>
    <string name="terminal_adding_failed_network_timeout">Terminal adding failed, network timeout!</string>
    <string name="the_search_is_completed_no_local_device">The search is completed, no local device</string>
    <string name="adding_terminal_success">Adding terminal success!</string>
    <string name="adding_terminal_failed">Adding terminal failed!</string>
    <string name="network_connection_is_not_available">Network connection is not available, Please confirm again!</string>
    <string name="please_enter_the_device_name">Please enter the device name!</string>
    <string name="The_length_range_of_device_name">The length range of device name is from 2 to 20!</string>
    <string name="please_enter_the_device_ID">Please enter the device ID, you can scan the QR code or search the device to input the device ID!</string>
</resources>