<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/page_bg_grey" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_height_size"
            android:background="@color/title_bg_black"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/more"
            android:textColor="@color/orange"
            android:textSize="@dimen/title_text_size" />

        <Button
            android:id="@+id/btn_modify_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_updown_alone"
            android:drawableLeft="@drawable/modify"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_button_right"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="@string/modify_pwd"
            android:textColor="@color/title_bg_black"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_up"
            android:drawableLeft="@drawable/setting"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_button_right"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="@string/setting"
            android:textColor="@color/title_bg_black"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_down"
            android:drawableLeft="@drawable/wifi"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_button_right"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="@string/set_wifi"
            android:textColor="@color/title_bg_black"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_up"
            android:drawableLeft="@drawable/help"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_button_right"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="@string/help"
            android:textColor="@color/title_bg_black"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_down"
            android:drawableLeft="@drawable/about"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_button_right"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="@string/about"
            android:textColor="@color/title_bg_black"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/redbtn_selector"
            android:gravity="center_vertical|center"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

</ScrollView>