<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg_grey"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_background" >

        <ImageView
            android:id="@+id/iv_add_share_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:background="@null"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_username" />

        <EditText
            android:id="@+id/et_add_share_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_add_share_name_del"
            android:layout_toRightOf="@+id/iv_add_share_name"
            android:background="@null"
            android:hint="@string/hint_share_name"
            android:padding="0.0dip"
            android:textColor="@color/black"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/btn_add_share_name_del"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.0dip"
            android:background="@drawable/input_delete"
            android:visibility="invisible" />
    </RelativeLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/share_device_explain"
        android:textColor="@color/light_black"
        android:textSize="16.0sp" />

    <Button
        android:id="@+id/btn_add_share_ok"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:text="@string/btn_ok"
        android:textColor="@color/white"
        android:textSize="18dp" />

</LinearLayout>